--- a/tutorial/3-collections.html
+++ b/tutorial/3-collections.html
@@ -109,8 +109,10 @@ var CommentsView = Backbone.View.extend({
     this.$el.html(html);
     /* Render each model in the collection as a list item (<li>).
      * Remember, we have the underscore functions: */
+     // console.log(this.get(comment));
     this.$el.find('ul').append(this.collection.map(function(comment) {
-      // YOUR CODE HERE
+      console.log(comment);
+      return '<li>' + comment.get('message') + ' ' + comment.get('votes') + '</li>'
     }));
 
     return this.$el;
@@ -134,7 +136,7 @@ var comments = new Comments(commentList);
 var commentsView = new CommentsView({ collection: comments });
 
 // Append it to the page (uncomment this when you are ready):
-// $('body').append(commentsView.render());
+$('body').append(commentsView.render());
     </script>
   </body>
 </html>
